first fully working version of metaSpace. metaSpace allows spaces on different nodes to appear as one single unified space. read/writes automatically routed based on a simple SHA1 hash modulo scheme of the hosts and the written to/read from furi.